--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mundo invertido</title>
 
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="light-theme" aria-label="O site está utilizando o tema light" role="body">
     <header>
         <audio id="music" autoplay>
-            <source src="assets/musics/normal-world.mpeg" aria-details="Audio do site" />
+            <source src="musics/normal-world.mpeg" aria-details="Audio do site" />
         </audio>
         <div class="header-content">
-            <img class="invert-element" src="assets/images/banner/logo.svg" alt="Imagem principal Mundo Invertido">
+            <img class="invert-element" src="images/banner/logo.svg" alt="Imagem principal Mundo Invertido">
             <p class="invert-element" role="text">
                 Uma jornada para quem não tem medo do desconhecido. O caminho para o
                 Mundo Invertido é incerto, repleto de obstáculos e perigos. Porém, a
@@ -26,14 +26,14 @@
             </p>
             <button id="switch-theme-button" onclick="switchTheme()">Inverter Mundos</button>
         </div>
-        <div id="Top-characters " class="world-characters"></div>
+        <div id="top-characters" class="world-characters"></div>
     </header>
 
     <main>
         <div id="bottom-characters" class="world-characters"></div>
         <section id="section-inverted-world" class="container">
             <div class="section-texts">
-                <h1>O mundo invertido</h1>
+                <h2>O mundo invertido</h2>
                 <p role="text">
                     O Mundo Invertido parece uma cópia do nosso mundo, mas com criaturas
                     horrendas, tempestades assustadoras, muita escuridão e entidades
@@ -41,7 +41,7 @@
                     tudo isso ao nosso mundo.
                 </p>
             </div>
-            <img class="invert-element" src="assets/images/content/inverted-world.png"
+            <img class="invert-element" src="images/content/inverted-world.png"
                 alt="Imagem ilustrativa do mundo invertido">
         </section>
         <section id="section-stranger-things-trailer" class="container">
@@ -65,14 +65,13 @@
                 <h2>A segunda série mais assistida da Netflix</h2>
                 <ul class="gallery-container" role="gallery">
                     <li class="gallery-image invert-element">
-                        <img src="assets/images/content/serie-image-01.png" alt="Imagem de Vecna" />
+                        <img src="images/content/serie-image-01.png" alt="Imagem de Vecna" />
                     </li>
                     <li class="gallery-image invert-element">
-                        <img src="assets/images/content/serie-image-02.png"
-                            alt="Imagem ilustrativa dos amigos de Eleven" />
+                        <img src="images/content/serie-image-02.png" alt="Imagem ilustrativa dos amigos de Eleven" />
                     </li>
                     <li class="gallery-image invert-element">
-                        <img src="assets/images/content/serie-image-03.png" alt="Imagem Eleven assustada" />
+                        <img src="images/content/serie-image-03.png" alt="Imagem Eleven assustada" />
                     </li>
                 </ul>
             </div>
@@ -114,11 +113,14 @@
             Projeto construído para fins didáticos, com o objetivo de colocar em
             prática os conhecimentos de HTML, CSS e JavaScript aprendidos na DIO._
         </p>
-        <img src="assets/images/footer/logo.svg" alt="">
+        <img src="images/footer/logo.svg" alt="">
     </footer>
-    <script type="module" src="assets/js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
     <script>
-
+        function switchTheme() {
+            document.body.classList.toggle('dark-theme');
+            document.body.classList.toggle('light-theme');
+        }
     </script>
 </body>
 
