--- a/index.html
+++ b/index.html
@@ -117,9 +117,22 @@
     </footer>
     <script type="module" src="js/main.js"></script>
     <script>
+        window.addEventListener('click', function () {
+            const audio = document.getElementById('music');
+            audio.play();
+            audio.volume = 0.2;
+        })
         function switchTheme() {
             document.body.classList.toggle('dark-theme');
             document.body.classList.toggle('light-theme');
+
+            const theme = document.body.classList[0];
+            const music = theme === 'light-theme' ? 'normal-world.mpeg' : 'inverted-world.mpeg'
+
+            const audio = document.getElementById('music');
+            audio.src = `musics/${music}`;
+            audio.play();
+            audio.volume = 0.2;
         }
     </script>
 </body>
